# Genin402-Privacy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.vue  ShadowCard.vue  types.ts
genin402/: __init__.py  engine.py  models.py  server.py
genin402/agents/: route_agent.py  stealth_agent.py
genin402/analyzers/: route_analyzer.py  shadow_analyzer.py  shield_analyzer.py
tests/: test_analyzers.py  test_engine.py  test_helpers.py  test_models.py
ts/: package.json  tsconfig.json
ts/src/: cli.ts  types.ts
