[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genin402"
version = "1.0.0"
description = "Solana privacy transfer agent — 402-gate stealth routing engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["genin402*"]
